--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.14.0",
     "ejs": "^2.3.4",
+    "express": "^4.13.3",
     "method-override": "^2.3.5",
     "mongoose": "^4.1.7",
     "morgan": "^1.6.1"
